--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Grafikart</title>
     </head>
     <body ng-app>
 
-        <input type="text" ng-model name="name" value="">
+        <input type="text" ng-model="task"/>
+        {{task}}
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     </body>
