--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
         <title>Grafikart</title>
     </head>
     <body ng-app>
-
+        
         <input type="text" ng-model="task"/>
-        {{task}}
+
+        <div ng-init="users=['Ber', 'Vince', 'Fan']">
+            <ul>
+                <li ng-repeat="user in users">{{user}}</li>
+            </ul>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     </body>
