--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li ng-repeat="user in users">{{user | uppercase}}</li>
             </ul>
+            {{users | filter: 'B'}}
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
