--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body ng-app>
 
     <h2>Example Input</h2>
-    <input type="text" ng-model="task" />
+    <input type="text" ng-model="query" />
 
-    <h2>Example Array Without Filter</h2>
+
+    <h2>Example Array With Filter By Query</h2>
     <div ng-init="users=['Ber', 'Vince', 'Fan']">
         <ul>
-            <li ng-repeat="user in users">{{user | uppercase}}</li>
+            <li ng-repeat="user in users | filter: query">{{user | uppercase}}</li>
         </ul>
     </div>
 
@@ -24,6 +25,14 @@
             <li ng-repeat="user in users | filter: 'n'">{{user | uppercase}}</li>
         </ul>
     </div>
+
+    <h2>Example Array Without Filter</h2>
+    <div ng-init="users=['Ber', 'Vince', 'Fan']">
+        <ul>
+            <li ng-repeat="user in users">{{user | uppercase}}</li>
+        </ul>
+    </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
 </body>
